Add A Filter To Calculate Elapsed Time & Update Material Angular

--- a/courses.html
+++ b/courses.html
@@ -55,7 +55,7 @@
             <md-card flex>
                 <md-toolbar md-colors="{background: 'primary-600'}">
                     <div class="md-toolbar-tools" flex>
-                        <span flex>Upcomming Deadlines</span>
+                        <span flex>Deadlines</span>
                     </div>
                 </md-toolbar>
                 <md-content flex>
