--- a/dashboard.html
+++ b/dashboard.html
@@ -91,18 +91,20 @@
             <md-list>
                 <md-list-item ng-if="!$ls.terms[thisTerm]">You haven't loaded your schedule yet!</md-list-item>
                 <md-list-item id="no-classes" ng-if="$ls.terms[thisTerm]">You have no classes today :D</md-list-item>
-                <md-list-item class="md-2-line" ng-repeat="class in $ls.terms[thisTerm] | todayClasses | orderBy: 'points[0].y'"
-                              style="border-left: 4px solid" md-colors="{borderColor: class.color}"  ng-click="null">
-                    <style>#no-classes { display: none }</style>
-                    <div class="md-list-item-text" style="min-width: 84px; max-width: 84px">
-                        <h3 style="margin-bottom: 5px">{{ class.start }}</h3>
+                <md-list-item ng-repeat="class in $ls.terms[thisTerm] | todayClasses | orderBy: 'points[0].y'"
+                              md-colors="{borderColor: class.color}" class="md-2-line today-classes" ng-click="null">
+                    <div class="md-list-item-text">
+                        <h3>{{ class.start }}</h3>
                         <h3>{{ class.end }}</h3>
                     </div>
-                    <div class="md-list-item-text class-time">
-                        <h3><md-icon md-font-icon="fa fa-map-marker" md-colors="{color: 'grey-800'}" style="min-width: 16px"></md-icon>
-                            {{ class.location }}</h3>
+                    <div class="md-list-item-text">
+                        <h3>
+                            <md-icon md-font-icon="fa fa-map-marker" md-colors="{color: 'grey-800'}"></md-icon>
+                            {{ class.location }}
+                        </h3>
                         <p>{{ class.title }}</p>
                     </div>
+                    <style>#no-classes { display: none }</style>
                 </md-list-item>
             </md-list>
         </md-content>
