--- a/courses.html
+++ b/courses.html
@@ -7,7 +7,7 @@
 <div layout="row" flex>
     <md-card flex="30">
         <md-toolbar md-colors="{background: 'brown-600'}">
-            <div class="md-toolbar-tools" flex>
+            <div class="md-toolbar-tools" style="padding-right: 30px" flex>
                 <span flex>Documents</span>
                 <md-button class="md-icon-button" style="margin-right: 8px" ng-hide="mass" ng-click="mass = !mass">
                     <md-icon md-font-icon="fa fa-cloud-download fa-2x fa-fw"></md-icon>
@@ -34,11 +34,11 @@
         </md-content>
     </md-card>
     <div layout="column" flex>
-        <div layout="row" flex="55">
+        <div layout="row" flex="50">
             <md-card flex>
-                <md-toolbar md-colors="{background: 'orange-600', color: 'grey-A100'}">
+                <md-toolbar md-colors="{background: 'primary-600'}">
                     <div class="md-toolbar-tools" flex>
-                        <span flex>Announcements</span>
+                        <span flex>Updates</span>
                     </div>
                 </md-toolbar>
                 <md-content flex>
@@ -53,19 +53,17 @@
                 </md-content>
             </md-card>
             <md-card flex>
-                <md-toolbar md-colors="{background: 'primary-600'}">
+                <md-toolbar md-colors="{background: 'orange-600', color: 'grey-A100'}">
                     <div class="md-toolbar-tools" flex>
                         <span flex>Deadlines</span>
                     </div>
                 </md-toolbar>
                 <md-content flex>
                     <md-list flex>
-                        <md-list-item class="md-3-line" ng-repeat="loop in repeat track by $index" ng-init="task = tasks[$index%3]" ng-click="null">
+                        <md-list-item class="md-2-line" ng-repeat="loop in repeat track by $index" ng-init="task = tasks[$index%3]" ng-click="null">
                             <div class="md-list-item-text" flex>
                                 <h3>{{ task.title }}</h3>
                                 <p>{{ task.group }}</p>
-                                <md-progress-linear style="margin-top: 4px" md-mode="determinate" flex="80"
-                                                    value="{{task.title.length * (index+3) % 90}}"></md-progress-linear>
                                 <div class="md-secondary" style="line-height: 24px; text-align: end" layout="column">
                                     <span>{{ task.day }}</span>
                                     <span>{{ task.time }}</span>
