--- a/courses.html
+++ b/courses.html
@@ -80,7 +80,7 @@
                         <span flex>Course Info</span>
                     </div>
                 </md-toolbar>
-                <md-content class="course-info-icons" layout="row" flex>
+                <md-content class="course-info-icons thin-margin" layout="row" flex>
                     <div ng-repeat="column in course.columns" layout="column" layout-align="space-between start" flex layout-margin>
                         <p ng-repeat="row in column">
                             <md-icon md-font-icon="fa fa-{{ row[2] }} fa-fw"></md-icon>
@@ -98,13 +98,13 @@
                 </md-toolbar>
                 <md-content flex layout-padding>
                     <div layout="column">
-                        <md-input-container style="margin-top: 8px" class="md-block">
+                        <md-input-container style="margin-top: 4px" class="md-block">
                             <label>Subject</label>
                             <input type="text">
                         </md-input-container>
-                        <md-input-container style="margin: -20px 0 0" class="md-block">
+                        <md-input-container style="margin: -24px 0 -8px" class="md-block">
                             <label>Description</label>
-                            <textarea rows="3"></textarea>
+                            <textarea rows="2"></textarea>
                         </md-input-container>
                         <div layout="row" style="position: relative">
                             <md-button class="md-raised no-margin" md-colors="{background: 'light-blue-500', color: 'grey-A100'}">Send</md-button>
