Delete Hardcoded Data & Add Trailing Slashs To Avoid Redirects

--- a/courses.html
+++ b/courses.html
@@ -112,7 +112,7 @@
                         </md-input-container>
                         <div layout="row" style="position: relative">
                             <md-button class="md-raised no-margin" md-colors="{background: 'light-blue-500', color: 'grey-A100'}">Send</md-button>
-                            <md-fab-speed-dial md-direction="up" class="md-scale" style="position: absolute; right: -8px; bottom: -8px">
+                            <md-fab-speed-dial md-direction="up" class="md-scale">
                                 <md-fab-trigger>
                                     <md-button class="md-fab" md-colors="{background: 'yellow-300'}">
                                         <md-icon md-font-icon="fa fa-pencil fa-lg" md-colors="{color: 'grey-700'}"></md-icon>
