--- a/courses.html
+++ b/courses.html
@@ -12,7 +12,8 @@
                 <md-button class="md-icon-button" style="margin-right: 8px" ng-hide="mass" ng-click="mass = !mass">
                     <md-icon md-font-icon="fa fa-cloud-download fa-2x fa-fw"></md-icon>
                 </md-button>
-                <md-button ng-show="mass" class="md-raised" style="margin-right: 16px" md-colors="{background: 'amber-300'}">Download Selected</md-button>
+                <md-button ng-show="mass" class="md-raised" style="margin-right: 16px"
+                           md-colors="{background: 'amber-300'}" ng-click="downloadFiles()">Download Selected</md-button>
                 <md-checkbox ng-show="mass" ng-checked="all" ng-click="all = !all"></md-checkbox>
             </div>
         </md-toolbar>
@@ -23,11 +24,11 @@
                     <div class="md-list-item-text" flex>
                         <h3>{{ document.title }}</h3>
                         <p>{{ document.file }}</p>
-                        <p class="md-secondary">
-                            <md-button ng-href="{{ document.url }}" download="{{ document.file }}" class="md-icon-button" ng-if="!mass">
+                        <p class="md-secondary download">
+                            <md-button ng-href="{{ document.url }}" download="{{ document.file }}" class="md-icon-button" ng-hide="mass">
                                 <md-icon md-font-icon="fa fa-download fa-2x"></md-icon>
                             </md-button>
-                            <md-checkbox ng-if="mass" ng-checked="all" class="md-accent md-hue-3"></md-checkbox>
+                            <md-checkbox ng-show="mass" ng-checked="all" class="md-accent md-hue-3"></md-checkbox>
                         </p>
                     </div>
                 </md-list-item>
