Move Things Around & Rename Others Preparing For Emails Linking

--- a/email.html
+++ b/email.html
@@ -23,7 +23,7 @@
                     </md-tab-body>
                 </md-tab>
                 <md-tab>
-                    <md-tab-label>For Courses</md-tab-label>
+                    <md-tab-label>Courses</md-tab-label>
                     <md-tab-body>
                         <md-list flex>
                             <md-list-item class="md-2-line" ng-repeat="loop in repeat track by $index" ng-init="c = content[1]" ng-click="openEmail($index)">
@@ -38,7 +38,7 @@
                     </md-tab-body>
                 </md-tab>
                 <md-tab>
-                    <md-tab-label>Others</md-tab-label>
+                    <md-tab-label>Events</md-tab-label>
                     <md-tab-body>
                         <md-list flex>
                             <md-list-item class="md-2-line" ng-repeat="loop in repeat track by $index" ng-init="c = content[2]" ng-click="openEmail($index)">
@@ -70,12 +70,6 @@
                 </md-card-header-text>
             </md-card-header>
             <md-card-content layout="column" layout-align="end start" flex>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo sem sit amet tortor condimentum, sit amet mollis lorem egestas. Nunc orci est, tempor sed semper sed, molestie eu dui. Aliquam vestibulum semper mauris id sagittis. Nunc aliquet eget eros eu tristique. Etiam eget laoreet justo, nec lobortis enim. Proin volutpat est at rutrum ornare. Vestibulum vel enim eget elit mollis sagittis nec at nisi. Pellentesque aliquam nibh sit amet iaculis vulputate.
-                    <br><br>
-                    Maecenas dignissim pretium sem nec facilisis. Vestibulum facilisis consectetur suscipit. Donec tincidunt purus non nisi placerat aliquet. Mauris et felis feugiat, mattis est at, mollis augue. Vivamus in rhoncus turpis, sed maximus sapien. Nullam varius semper nibh maximus sollicitudin. In ullamcorper mi tortor, quis elementum libero semper at. Vivamus volutpat varius mattis. Duis quis interdum tellus, commodo luctus nulla.
-                </p>
-                <img ng-src="https://images.pexels.com/photos/75652/boards-glasses-smartphone-phone-75652.jpeg?dl&fit=crop&w=640&h=427" class="md-card-image">
             </md-card-content>
         </md-content>
     </md-card>
