--- a/email.html
+++ b/email.html
@@ -6,12 +6,13 @@
 <div layout="row" flex>
     <md-card flex="33">
         <md-content layout="row" flex>
-            <md-tabs md-selected="filter" flex>
+            <md-tabs md-selected="$ls.selected.tab" flex>
                 <md-tab ng-repeat="tab in tabs" ng-click="getEmails(tab)">
                     <md-tab-label>{{ tab.capitalize() }}</md-tab-label>
                     <md-tab-body>
                         <md-list flex>
-                            <md-list-item class="md-2-line" ng-repeat="email in $ls.emails[tab]" ng-click="null">
+                            <md-list-item ng-repeat="email in $ls.emails[tab] track by $index" ng-click="openEmail(tab, $index)"
+                                          md-colors="isSelected(tab, $index) && {background: 'accent-A100'}" class="md-2-line">
                                 <div ng-if="tab != 'events'" class="md-avatar-icon fix-icon" md-colors="{background: 'blue-grey-400'}" style="min-width: 36px">
                                     {{ getInitials(email.sender || email.course) }}
                                 </div>
@@ -32,19 +33,28 @@
     </md-card>
     <md-card flex>
         <md-content layout-padding flex>
+            {{ email = $ls.emails[$ls.selected.email[0]][$ls.selected.email[1]]; '' }}
             <md-card-title>
                 <md-card-title-text>
-                    <span class="md-display-1">{{ current.title + current.index }}</span>
+                    <span class="md-display-1">{{ email.title }}</span>
                 </md-card-title-text>
             </md-card-title>
-            <md-card-header>
-                <div id="email-circle" class="fix-icon" md-colors="{background: 'blue-grey-400'}">{{ current.initial + current.index }}</div>
-                <md-card-header-text>
-                    <span class="md-title">{{ current.sender(current.index) }}</span>
-                    <span class="md-subhead">{{ current.index + current.time }}</span>
+            <md-card-header ng-if="$ls.selected.email[0] != 'events'" >
+                <div id="email-circle" class="fix-icon" md-colors="{background: 'blue-grey-400'}">
+                    {{ getInitials(email.sender || email.course) }}
+                </div>
+                <md-card-header-text layout="row" layout-align="space-between">
+                    <div layout="column">
+                        <span class="md-title">{{ email.sender || email.course }}</span>
+                        <span class="md-subhead">{{ email.from || "Blackboard Generated" }}</span>
+                    </div>
+                    <div layout="column" style="text-align: right">
+                        <span class="md-title">{{ email.time | timeDistance }}</span>
+                        <span class="md-subhead">{{ email.event }}</span>
+                    </div>
                 </md-card-header-text>
             </md-card-header>
-            <md-card-content layout="column" layout-align="end start" flex>
+            <md-card-content layout="column" ng-bind-html="email.body" flex>
             </md-card-content>
         </md-content>
     </md-card>
