--- a/email.html
+++ b/email.html
@@ -54,7 +54,7 @@
                     </div>
                 </md-card-header-text>
             </md-card-header>
-            <md-card-content layout="column" ng-bind-html="email.body" flex>
+            <md-card-content layout="column" ng-bind-html="$ls.emails.body[$ls.selected.email[1]]">
             </md-card-content>
         </md-content>
     </md-card>
