--- a/email.html
+++ b/email.html
@@ -11,8 +11,8 @@
                     <md-tab-label>{{ tab.capitalize() }}</md-tab-label>
                     <md-tab-body>
                         <md-list flex>
-                            <md-list-item ng-repeat="(id, email) in $ls.emails[tab]" ng-click="openEmail(tab, id)"
-                                          md-colors="isSelected(tab, id) && {background: 'accent-A100'}" class="md-2-line">
+                            <md-list-item ng-repeat="email in $ls.emails[tab] | objectToArray | orderBy: '-time'" ng-click="openEmail(tab, email.id)"
+                                          md-colors="isSelected(tab, email.id) && {background: 'accent-A100'}" class="md-2-line">
                                 <div ng-if="tab != 'events'" class="md-avatar-icon fix-icon" md-colors="{background: 'blue-grey-400'}" style="min-width: 36px">
                                     {{ getInitials(email.sender || email.course) }}
                                 </div>
