--- a/dashboard.html
+++ b/dashboard.html
@@ -52,7 +52,7 @@
         </md-toolbar>
         <md-content>
             <md-list>
-                <md-list-item class="md-2-line" ng-repeat="deadline in $ls.terms[term] | deadlines | orderBy: '-dueDate'" ng-click="null">
+                <md-list-item class="md-2-line" ng-repeat="deadline in $ls.terms[term] | extract: 'deadlines' | orderBy: '-dueDate'" ng-click="null">
                     <div class="md-list-item-text" flex>
                         <h3>{{ deadline.title }}</h3>
                         <p>{{ deadline.course }}</p>
@@ -114,12 +114,17 @@
         </md-toolbar>
         <md-content>
             <md-list>
-                <md-list-item class="md-1-line" ng-repeat="grade in grades" ng-click="null">
+                <md-list-item class="md-2-line" ng-repeat="grade in $ls.terms[term] | extract: 'grades' | orderBy: '-time'" ng-click="null">
                     <div class="md-list-item-text" flex>
+                        <h3>{{ grade.title }}</h3>
                         <p>{{ grade.course }}</p>
                     </div>
                     <div class="md-secondary md-avatar-icon fix-icon" style="margin-right: 0"
-                         md-colors="{background: grade.color + '-600', color: 'grey-50'}">{{ grade.letter }}</div>
+                         md-colors="{background: (grade | gradeColor) + '-600', color: 'grey-50'}">
+                        <span style="line-height: 28px; margin-left: -2px;">
+                            {{ grade.grade }}<sub style="font-size: 12px">/<sub>{{ grade.outOf }}</sub></sub>
+                        </span>
+                    </div>
                 </md-list-item>
             </md-list>
         </md-content>
