--- a/includes.html
+++ b/includes.html
@@ -43,3 +43,11 @@
             <script src="/static/js/calendar.js"></script>
             <script src="/static/js/notfound.js"></script>
         {% endcompress %}
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108589406-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag("js", new Date());
+            gtag("config", "UA-108589406-1");
+        </script>
