--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
                 <md-list-item class="md-2-line" ng-repeat="update in $ls.updates | orderBy: '-time'" ng-click="null">
                     <div class="md-list-item-text">
                         <h3>{{ update.title }}</h3>
-                        <p>{{ update.course }}</p>
+                        <p>{{ $ls.courses[update.course].title }}</p>
                     </div>
                     <div class="md-list-item-text align-right">
                         <h3>{{ update.time | timeDistance }}</h3>
@@ -28,7 +28,7 @@
         </md-toolbar>
         <md-content>
             <md-list>
-                <md-list-item class="md-2-line" ng-repeat="email in $ls.emails['personal'] | objectToArray | orderBy: '-time'" ng-click="null">
+                <md-list-item class="md-2-line" ng-repeat="email in $ls.emails['personal'] | orderBy: '-time'" ng-click="null">
                     <div class="md-avatar-icon fix-icon" md-colors="{background: 'blue-grey-400'}" style="min-width: 36px">
                         {{ getInitials(email.sender) }}
                     </div>
@@ -52,10 +52,10 @@
         </md-toolbar>
         <md-content>
             <md-list>
-                <md-list-item class="md-2-line" ng-repeat="deadline in $ls.terms[term] | extract: 'deadlines' | orderBy: '-dueDate'" ng-click="null">
+                <md-list-item class="md-2-line" ng-repeat="deadline in $ls.deadlines | orderBy: '-dueDate'" ng-click="null">
                     <div class="md-list-item-text" flex>
                         <h3>{{ deadline.title }}</h3>
-                        <p>{{ deadline.course }}</p>
+                        <p>{{ $ls.courses[deadline.course].title }}</p>
                     </div>
                     <div class="md-list-item-text align-right">
                         <h3>{{ deadline.dueDate | timeDistance }}</h3>
@@ -87,8 +87,8 @@
         </md-toolbar>
         <md-content>
             <md-list>
-                <md-list-item id="no-classes" ng-if="$ls.terms[term].settings">You have no classes today :D</md-list-item>
-                <md-list-item ng-repeat="class in $ls.terms[term] | todayClasses | orderBy: 'points[0].y'"
+                <md-list-item id="no-classes" ng-if="$ls.terms[term].courses">You have no classes today :D</md-list-item>
+                <md-list-item ng-repeat="class in todayClasses() | orderBy: 'points[0].y'"
                               md-colors="{borderColor: class.color}" class="md-2-line today-classes" ng-click="null">
                     <div class="md-list-item-text">
                         <h3>{{ class.start }}</h3>
@@ -114,10 +114,10 @@
         </md-toolbar>
         <md-content>
             <md-list>
-                <md-list-item class="md-2-line" ng-repeat="grade in $ls.terms[term] | extract: 'grades' | orderBy: '-time'" ng-click="null">
+                <md-list-item class="md-2-line" ng-repeat="grade in $ls.grades | orderBy: '-time'" ng-click="null">
                     <div class="md-list-item-text" flex>
                         <h3>{{ grade.title }}</h3>
-                        <p>{{ grade.course }}</p>
+                        <p>{{ $ls.courses[grade.course].title }}</p>
                     </div>
                     <div class="md-secondary md-avatar-icon fix-icon" style="margin-right: 0"
                          md-colors="{background: (grade | gradeColor) + '-600', color: 'grey-50'}">
