--- a/email.html
+++ b/email.html
@@ -11,7 +11,7 @@
                     <md-tab-label>{{ tab.capitalize() }}</md-tab-label>
                     <md-tab-body>
                         <md-list flex>
-                            <md-list-item ng-repeat="email in $ls.emails[tab] | objectToArray | orderBy: '-time'" ng-click="openEmail(tab, email.id)"
+                            <md-list-item ng-repeat="email in $ls.emails[tab] | orderBy: '-time'" ng-click="openEmail(tab, email.id)"
                                           md-colors="isSelected(tab, email.id) && {background: 'accent-A100'}" class="md-2-line">
                                 <div ng-if="tab != 'events'" class="md-avatar-icon fix-icon" md-colors="{background: 'blue-grey-400'}" style="min-width: 36px">
                                     {{ getInitials(email.sender || email.course) }}
@@ -33,7 +33,7 @@
     </md-card>
     <md-card flex>
         <md-content ng-if="$ls.selected.email[1]" layout-padding flex>
-            {{ email = $ls.emails[$ls.selected.email[0]][$ls.selected.email[1]]; '' }}
+            {{ email = ($ls.emails[$ls.selected.email[0]] | find: $ls.selected.email[1]); '' }}
             <md-card-title>
                 <md-card-title-text>
                     <span class="md-display-1">{{ email.title }}</span>
