--- a/includes.html
+++ b/includes.html
@@ -33,6 +33,7 @@
         {% compress js %}
             <script src="/static/js/scripts.js"></script>
             <script src="/static/js/app.js"></script>
+            <script src="/static/js/factories.js"></script>
             <script src="/static/js/layout.js"></script>
             <script src="/static/js/login.js"></script>
             <script src="/static/js/welcome.js"></script>
