Dismiss Updates Locally & On Server Once Trash Icon Is Clicked

--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@
                         <p class="md-caption">{{ update.event }}</p>
                     </div>
                     <div class="md-secondary">
-                        <md-button class="md-icon-button">
+                        <md-button class="md-icon-button" ng-click="dismissUpdate(update.dismiss)">
                             <md-icon md-font-icon="fa fa-trash fa-1x"></md-icon>
                         </md-button>
                     </div>
