--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,7 @@
         </md-toolbar>
         <md-content>
             <md-list>
-                <md-list-item class="md-2-line" ng-repeat="email in $ls.emails['personal'] | orderBy: '-time'" ng-click="null">
+                <md-list-item class="md-2-line removeable" ng-repeat="email in $ls.emails['personal'] | orderBy: '-time'">
                     <div class="md-avatar-icon fix-icon" md-colors="{background: 'blue-grey-400'}" style="min-width: 36px">
                         {{ getInitials(email.sender) }}
                     </div>
@@ -44,6 +44,11 @@
                     <div class="md-list-item-text align-right">
                         <h3>{{ email.time | timeDistance }}</h3>
                         <p class="md-caption">{{ email.event | limitTo: 12 }}</p>
+                    </div>
+                    <div class="md-secondary">
+                        <md-button class="md-icon-button" ng-click="deleteEmail(email.id)">
+                            <md-icon md-font-icon="fa fa-trash fa-1x"></md-icon>
+                        </md-button>
                     </div>
                 </md-list-item>
             </md-list>
